refactor: update auth apis
